--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <div id="header">
             <h1>Шунтов Игорь</h1>
             <h3>Начинающий full-stack разработчик. Специалист по информационной безопасности</h3>
-            <p><a href="mailto:vvanow@yandex.ru">vvanow@yandex.ru</a><a href="https://vk.com/id157594827">https://vk.com/id157594827</a></p>
+            <p><a href="mailto:vvanow@yandex.ru">vvanow@yandex.ru</a>
+                <a href="https://vk.com/id157594827">https://vk.com/id157594827</a></p>
         </div>
         <div id="main">
             <p>ckdvsvnn vviksosdvn vnsdknsi vsdmii vmijpaopcvafjpj pijioa jfsfi s if siofi sifisihfhshfsho</p>
